--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,17 @@
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+<div class="jumbotron jumbotron-fluid" style="background:linear-gradient(to bottom, rgb(70, 70, 134), white); color: rgb(253, 252, 246); font-weight: bold;">
+
+    <div class="container" >
+      <h1 class="display-4">
+        <span class="material-icons" style="font-size: 60px; vertical-align: text-bottom;">
+          supervised_user_circle
+        </span> Cartera de Clientes</h1>
+      <hr class="my-5" style="border-color: rgb(202, 202, 200)">
+      <p class="lead" style="font-size: 24px;">Consultar, Editar y Crear Clientes</p>
+    </div>
+  </div>
+
+
+
 <app-buscador></app-buscador>
 <router-outlet></router-outlet>
