--- a/src/app/component/listado-categorias/listado-categorias.component.html
+++ b/src/app/component/listado-categorias/listado-categorias.component.html
@@ -1,3 +1,5 @@
-<div *ngFor="let item of arrayCategories">
-    <p>Nombre: {{item.name}}</p>
+<div class="row justify-content-center">
+    <div class="col-4 m-2" *ngFor="let item of arrayCategories" style="border: 1px  solid black;">
+      <p>Nombre: {{item.name}}</p>
+  </div>
 </div>
