Cambio de title y colores

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,7 @@
           supervised_user_circle
         </span> Cartera de Clientes</h1>
       <hr class="my-5" style="border-color: rgb(202, 202, 200)">
-      <p class="lead" style="font-size: 24px;">Consultar, Editar y Crear Clientes</p>
+      <p class="lead" style="font-size: 24px; color: black;">Consultar, Editar y Crear Clientes</p>
     </div>
   </div>
 
