--- a/src/app/component/buscador/buscador.component.html
+++ b/src/app/component/buscador/buscador.component.html
@@ -17,8 +17,11 @@
       </form>
     </div>
 
-    <div *ngFor='let item of resultadoBusq'>
-      <p class="row justify-content-center m-2" *ngIf="nombre == this.resultadoBusq[0].name" style="border: 1px  solid black;">Nombre: {{item.name}}</p>
+    <div class="card" style="width: 30em;" *ngFor='let item of resultadoBusq'>
+      <p class="row justify-content-center m-2" *ngIf="nombre == this.resultadoBusq[0].name"> <b>Nombre:</b>
+        {{item.name}}</p>
+      <a [routerLink]="['eliminar', this.resultadoBusq[0].id]" class="btn btn-danger my-1">Eliminar</a>
+      <a [routerLink]="['editar', this.resultadoBusq[0].id]" class="btn btn-primary my-1">Editar</a>
     </div>
 
     <app-listado-categorias *ngIf="!bExito || nombre != this.resultadoBusq[0].name"></app-listado-categorias>
