obtencion en editar de datos funciona

--- a/src/app/component/editar-categoria/editar-categoria.component.html
+++ b/src/app/component/editar-categoria/editar-categoria.component.html
@@ -1,3 +1,3 @@
 <form >
-  <input type="text" name="name" [(ngModel)]="categoria.id">
+  <input type="text" name="name" [(ngModel)]="categoria.name">
 </form>
