Boton y funcion update correcta

--- a/src/app/component/editar-categoria/editar-categoria.component.html
+++ b/src/app/component/editar-categoria/editar-categoria.component.html
@@ -1,3 +1,6 @@
-<form >
+<form>
   <input type="text" name="name" [(ngModel)]="categoria.name">
+  <a [routerLink]="['/']">
+    <button (click)="submit()" type="submit">Isa Parguela</button>
+  </a>
 </form>
