--- a/src/app/component/editar-categoria/editar-categoria.component.html
+++ b/src/app/component/editar-categoria/editar-categoria.component.html
@@ -1,6 +1,6 @@
 <form>
   <input type="text" name="name" [(ngModel)]="categoria.name">
   <a [routerLink]="['/']">
-    <button (click)="submit()" type="submit">Isa Parguela</button>
+    <button (click)="submit()" type="submit">Enviar</button>
   </a>
 </form>
