--- a/src/app/component/crear-categoria/crear-categoria.component.html
+++ b/src/app/component/crear-categoria/crear-categoria.component.html
@@ -1,7 +1,13 @@
-<form>
-<label>Nombre: </label>
-<input [(ngModel)]="categoria.name" type="text">
-<label>Descripcion</label> 
-<input [(ngModel)]="categoria.description" type="text">
-<button type="submit" (click)="crearCategoria()"></button>
-</form>
+<div class='container'>
+  <div class="row justify-content-center m-5">
+    <form class='form-group'>
+      <label>Nombre: </label>
+      <input [(ngModel)]="categoria.name" class='form-control' name='name' type="text">
+      <label>Descripcion</label>
+      <input [(ngModel)]="categoria.description" class='form-control' name='description' type="text">
+
+      <button type="submit" class="btn btn-primary m-2"  (click)="crearCategoria()">Añadir</button>
+
+    </form>
+  </div>
+</div>
