--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,41 +1,35 @@
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-<div class="jumbotron jumbotron-fluid" style="background:linear-gradient(to bottom, rgb(70, 70, 134), white); color: rgb(253, 252, 246); font-weight: bold;">
+<div class="jumbotron jumbotron-fluid"
+  style="background:linear-gradient(to bottom, rgb(70, 70, 134), white); color: rgb(253, 252, 246); font-weight: bold;">
 
 
-    <div class="container" >
-      <h1 class="display-4">
-        <span class="material-icons" style="font-size: 60px; vertical-align: text-bottom;">
-          supervised_user_circle
-        </span> Cartera de Clientes</h1>
-      <hr class="my-5" style="border-color: rgb(202, 202, 200)">
-      <p class="lead" style="font-size: 24px; color: black;">Consultar, Editar y Crear Clientes</p>
-    </div>
+  <div class="container">
+    <h1 class="display-4">
+      <span class="material-icons" style="font-size: 60px; vertical-align: text-bottom;">
+        supervised_user_circle
+      </span> Cartera de Clientes</h1>
+    <hr class="my-5" style="border-color: rgb(202, 202, 200)">
+    <p class="lead" style="font-size: 24px; color: black;">Consultar, Editar y Crear Clientes</p>
   </div>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="#">Navbar</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
+</div>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01"
+    aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
 
-    <div class="collapse navbar-collapse" id="navbarColor01">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Features</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Pricing</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">About</a>
-        </li>
-      </ul>
-      <form class="form-inline">
-        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-info my-2 my-sm-0" type="submit">Search</button>
-      </form>
-    </div>
-  </nav>
+  <div class="collapse navbar-collapse" id="navbarColor01">
+    <ul class="navbar-nav m-auto active">
+      <li class="nav-item ">
+        <a class="nav-link" [routerLink]="['/']">Home <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" [routerLink]="['/add']">Añadir</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Contacto</a>
+      </li>
+    </ul>
+  </div>
+</nav>
 <router-outlet></router-outlet>
