--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -27,7 +27,7 @@
         <a class="nav-link" [routerLink]="['/add']">Añadir</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Contacto</a>
+        <a class="nav-link" [routerLink]="['/contacto']" routerLinkActive="router-link-active" >Contacto</a>
       </li>
     </ul>
   </div>
